Fix T38633: glsl not working well with mixed cycles/blender material nodes.